# survey-sentiment

./: main.py  pyproject.toml
backend/: app.py
backend/data/: surveys.json
backend/models/: __init__.py  sentiment.py
backend/services/: __init__.py  analyzer.py
backend/utils/: category.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: Layout.js
frontend/src/services/: api.js
frontend/src/utils/: helpers.js
