[project]
name = "survey-sentiment"
version = "0.1.0"
description = "Sentiment analysis tool for horse racing club survey comments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "nltk>=3.8.1",
    "transformers>=4.37.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "spacy>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88